--- a/index.html
+++ b/index.html
@@ -31,32 +31,47 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h2>Description</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This Wordpress plugin allows a user to create an accordion display of categories and posts using a short tag on their page or post.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>Setup</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Create a posts category that will be used as the parent for all categories in the display. It there is a different accordion for different pages, you will want to create a separate categories for each page.</p>
 
-<h3>Designer Templates</h3>
+<p>Place subcategories under the created parent. These will be the different accordion sections</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Attach posts to the proper categories in the accordions.</p>
 
-<h3>Rather Drive Stick?</h3>
+<h2>Short Tag</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><code>[accordioncat cat="parent_category"]</code></p>
 
-<h3>Authors and Contributors</h3>
+<h2>Required Parameters</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>**cat **- contains the slug for the parent category</p>
 
-<h3>Support or Contact</h3>
+<h2>Optional Parameters</h2>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>**startingcat **- the slug of the category that will start up open on the first load. The default is all closed.</p>
+
+<p>**sortorder **- this can be any of the following category fields:  'id', 'name', 'slug', 'count', 'term_group'. Default is 'slug' .</p>
+
+<p>**order **- 'asc' for acceding order or 'desc' for descending order. Default is 'asc'.</p>
+
+<p>**hideposttitle **- Hides the post title. Valid values are 'yes' and 'no'. Default is 'no'.</p>
+
+<p>**debug **- if set to "true" will dump the entire accordion data structure. to the page (all category and post object elements)</p>
+
+<h2>Examples</h2>
+
+<p>To create an accordion with a parent category of 'mystuff' that starts with the sub-category 'openingcat' open, use:</p>
+
+<p><code>[accordioncat cat="parent_category" startingcat="openingcat"]</code></p>
+
+<p>To create an accordion with a parent category of 'mystuff' that starts with the sub-category 'openingcat' open and is sorted by name, use:</p>
+
+<p><code>[accordioncat cat="parent_category" startingcat="openingcat" sortorder="name"]</code></p>
       </section>
     </div>
 
